--- a/pdf.html
+++ b/pdf.html
@@ -42,7 +42,7 @@
   <details class="subject">
     <summary>📘 Math 3 - مذكرات</summary>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1mw8doaoJqy9Br5m5Zb_Hk0DWIwUA2qKn/view?usp=drive_link" target="_blank"> Math </a></li>
+      <li><a href="https://drive.google.com/file/d/1mw8doaoJqy9Br5m5Zb_Hk0DWIwUA2qKn/view?usp=sharing" target="_blank"> Math </a></li>
  
     </ul>
   </details>
@@ -52,7 +52,7 @@
   <details class="subject">
     <summary>🔌 Circuits - ملفات</summary>
     <ul>
-      <li><a href="https://drive.google.com/file/d/1sSMh0Cq6w0K3UnpuJKpazivjpZEm8ChZ/view?usp=drive_link" target="_blank">Circuits</a></li>
+      <li><a href="https://drive.google.com/file/d/1sSMh0Cq6w0K3UnpuJKpazivjpZEm8ChZ/view?usp=sharing" target="_blank">Circuits</a></li>
 
     </ul>
   </details>
@@ -69,4 +69,5 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 
 
 ---
+
 
