--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <meta charset="UTF-8">
   <title>📚 مكتبتي التعليمية</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
@@ -442,5 +445,6 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
