--- a/home.html
+++ b/home.html
@@ -3,6 +3,8 @@
 <head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" href="favicon.ico" type="image/ico">
   
   <meta charset="UTF-8">
   <title>📚 مكتبتي التعليمية</title>
@@ -445,6 +447,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
