--- a/pdf.html
+++ b/pdf.html
@@ -3,6 +3,8 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico" type="image/ico">
+
   <title>📑 ملفات PDF</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -69,5 +71,6 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 
 
 ---
+
 
 
