--- a/home.html
+++ b/home.html
@@ -145,6 +145,48 @@
     padding: 10px;
   }
 }
+
+
+
+
+/* الخلفية */
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 2000;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+}
+
+/* الصندوق */
+.modal-content {
+  background: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 800px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  position: relative;
+}
+
+/* زر الإغلاق */
+.modal-content .close-btn {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #333;
+}
+
+
+
+
+
+
     
   </style>
 </head>
@@ -155,6 +197,21 @@
     <a href="pdf.html">📑 ملفات PDF</a>
   </nav>
 
+
+
+
+
+<!-- نافذة الفيديو -->
+<div id="videoModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" id="closeModal">❌</span>
+    <iframe id="videoFrame" width="100%" height="400" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+
+
+
+  
   <h1>📚 مكتبتي التعليمية</h1>
    
   <div class="global-progress">
@@ -437,6 +494,50 @@
 
   // أول تحميل
   updateGlobalProgress();
+
+
+
+
+  const modal = document.getElementById("videoModal");
+const videoFrame = document.getElementById("videoFrame");
+const closeModal = document.getElementById("closeModal");
+
+// افتح الفيديو عند الضغط على أي درس
+document.querySelectorAll("ul li a").forEach(link => {
+  link.addEventListener("click", (e) => {
+    e.preventDefault();
+    const url = link.getAttribute("href");
+
+    let videoId = "";
+    if (url.includes("watch?v=")) {
+      videoId = url.split("watch?v=")[1].split("&")[0];
+    } else if (url.includes("youtu.be")) {
+      videoId = url.split("youtu.be/")[1];
+    }
+
+    if (videoId) {
+      let embedUrl = `https://www.youtube.com/embed/${videoId}`;
+      videoFrame.src = embedUrl;
+      modal.style.display = "flex";
+    }
+  });
+});
+
+// قفل النافذة
+closeModal.addEventListener("click", () => {
+  modal.style.display = "none";
+  videoFrame.src = ""; // يوقف الفيديو
+});
+
+// قفل عند الضغط بره
+window.addEventListener("click", (e) => {
+  if (e.target === modal) {
+    modal.style.display = "none";
+    videoFrame.src = "";
+  }
+});
+
+  
 </script>
   
 <footer>
@@ -447,6 +548,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
