--- a/pdf.html
+++ b/pdf.html
@@ -94,6 +94,8 @@
   <nav>
     <a href="index.html">🎥 الفيديوهات</a>
     <a href="pdf.html">📑 ملفات PDF</a>
+    <a href="progress.html">⚙️ إعدادات التقدم</a>
+
   </nav>
 
   <h1>📑 مكتبتي - ملفات PDF</h1>
@@ -164,6 +166,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 
 
 ---
+
 
 
 
