--- a/home.html
+++ b/home.html
@@ -195,6 +195,8 @@
   <nav>
     <a href="index.html">🎥 الفيديوهات</a>
     <a href="pdf.html">📑 ملفات PDF</a>
+    <a href="progress.html">⚙️ إعدادات التقدم</a>
+
   </nav>
 
 
@@ -548,6 +550,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
