--- a/progress.html
+++ b/progress.html
@@ -41,6 +41,15 @@
   </style>
 </head>
 <body>
+
+
+  <nav>
+    <a href="index.html">🎥 الفيديوهات</a>
+    <a href="pdf.html">📑 ملفات PDF</a>
+    <a href="progress.html">⚙️ إعدادات التقدم</a>
+
+  </nav>
+  
   <h1>⚙️ إعدادات التقدم</h1>
   <div class="menu-box">
     <button onclick="exportProgress()">📤 تصدير التقدم</button>
