--- a/progress.html
+++ b/progress.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico" type="image/ico">
+  
   <meta charset="UTF-8">
   <title>إعدادات التقدم</title>
   <style>
