--- a/pdf.html
+++ b/pdf.html
@@ -8,6 +8,8 @@
 
   <title>📑 ملفات PDF</title>
   <style>
+     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
+
     body {font-family:"Cairo",sans-serif;margin:0;background:linear-gradient(135deg,#f0f4f8,#e6ecf0);direction:rtl;}
     nav {background:#0077b6;padding:15px;display:flex;justify-content:center;gap:20px;}
     nav a {color:#fff;text-decoration:none;font-weight:bold;font-size:18px;transition:color .3s;}
@@ -165,6 +167,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 
 
 ---
+
 
 
 
