--- a/index.html
+++ b/index.html
@@ -93,17 +93,19 @@
     <button onclick="checkPassword()">Login</button>
   </div>
 
- <script>
-  if (!localStorage.getItem("unlocked")) {
-    let pass = prompt("ادخل كلمة السر");
-    if (pass === "1234") {
-      localStorage.setItem("unlocked", "true");
-    } else {
-      alert("❌ كلمة السر غلط!");
-      location.href = "pdf.html"; // يرجعك بدل ما يعمل reload
+ 
+       <script>
+    function checkPassword() {
+      const password = document.getElementById("password").value;
+      if (password === "12345") { // غيرها بكلمة السر اللي انت عايزها
+        window.location.href = "home.html"; // الصفحة الرئيسية بتاعتك
+      } else {
+        alert(" 🤣🤣😂😂 انت مش عارف كلمة السر ولا ايه !");
+      }
     }
-  }
-</script>
+  </script>
+      
+      
   
 </body>
 </html>
