--- a/progress.html
+++ b/progress.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico" type="image/ico">
   
-  <meta charset="UTF-8">
-  <title>إعدادات التقدم</title>
-   
-   <style>
-    body {font-family:"Cairo",sans-serif;margin:0;background:linear-gradient(135deg,#f0f4f8,#e6ecf0);direction:rtl;}
-    nav {background:#0077b6;padding:15px;display:flex;justify-content:center;gap:20px;}
+  <style>
+    body {font-family: "Cairo", sans-serif;margin:0;background:linear-gradient(135deg,#f0f4f8,#e6ecf0);direction:rtl;}
+    nav {background:#0077b6;padding:15px;display:flex;justify-content:center;gap:20px;position:sticky;top:0;z-index:10;}
     nav a {color:#fff;text-decoration:none;font-weight:bold;font-size:18px;transition:color .3s;}
     nav a:hover {color:#ffdd00;}
-    h1 {text-align:center;margin:20px 0;color:#222;font-size:28px;}
- 
-    }
+    h1 {text-align:center;color:#222;margin:20px 0;font-size:28px;}
+
     .menu-box {
       background: #fff;
       max-width: 400px;
@@ -42,70 +35,35 @@
     }
 
 
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #f2f2f2;
+      color: #333;
+      font-family: "Cairo", sans-serif;
+      font-size: 14px;
+    }
 
-
-  footer {
-  text-align: center;       /* يجعل النص في المنتصف أفقيًا */
-  padding: 15px;            /* مسافة من الحواف */
-  background-color:#8cc1f3; /* لون خلفية الفوتر */
-  color: #333;              /* لون الخط */
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-}
-
-    
     /* 📱 تابلت */
-@media (max-width: 768px) {
-  h1 {
-    font-size: 22px;
-  }
+    @media (max-width: 768px) {
+      h1 { font-size: 22px; }
+      nav a { font-size: 16px; }
+    }
 
-  nav a {
-    font-size: 16px;
-  }
-
-  .progress-container,
-  .global-progress {
-    height: 20px;
-  }
-
-  .progress-bar,
-  .global-progress-bar {
-    font-size: 11px;
-  }
-}
-
-/* 📱 موبايل */
-@media (max-width: 480px) {
-  h1 {
-    font-size: 20px;
-  }
-
-  nav {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  ul {
-    grid-template-columns: 1fr; /* درس واحد في السطر */
-  }
-
-  li a {
-    font-size: 14px;
-    padding: 10px;
-  }
-}
-    
+    /* 📱 موبايل */
+    @media (max-width: 480px) {
+      h1 { font-size: 20px; }
+      nav { flex-direction: column; gap: 10px; }
+      li a { font-size: 14px; padding: 10px; }
+    }
   </style>
 </head>
 <body>
-
 
   <nav>
     <a href="index.html">🎥 الفيديوهات</a>
     <a href="pdf.html">📑 ملفات PDF</a>
     <a href="progress.html">⚙️ إعدادات التقدم</a>
-
   </nav>
   
   <h1>⚙️ إعدادات التقدم</h1>
@@ -146,12 +104,10 @@
     }
   </script>
 
+  <footer>
+    Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab 
+    &copy; 2025
+  </footer>
   
-<footer>
-Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab 
-&copy; 2025
-</footer>
-  
-
 </body>
 </html>
