--- a/home.html
+++ b/home.html
@@ -186,7 +186,57 @@
 
 
 
+.progress-menu {
+  position: relative;
+  text-align: center;
+  margin: 20px auto;
+}
 
+#toggleMenu {
+  background: linear-gradient(135deg, #4CAF50, #2E7D32);
+  color: #fff;
+  padding: 10px 18px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: 0.3s;
+}
+#toggleMenu:hover {
+  background: linear-gradient(135deg, #66BB6A, #388E3C);
+}
+
+#menuContent {
+  display: none;
+  margin-top: 12px;
+  background: #f9f9f9;
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  animation: fadeIn 0.3s ease;
+}
+#menuContent button {
+  display: block;
+  width: 100%;
+  margin: 8px 0;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background: #75efb2;
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+#menuContent button:hover {
+  background: #a3f4cc;
+}
+
+@keyframes fadeIn {
+  from {opacity: 0; transform: translateY(-10px);}
+  to {opacity: 1; transform: translateY(0);}
+}
+    
     
   </style>
 </head>
@@ -212,6 +262,14 @@
 
 
 
+<div class="progress-menu">
+  <button id="toggleMenu">⚙️ إعدادات التقدم</button>
+  <div id="menuContent">
+    <button onclick="exportProgress()">📤 تصدير التقدم</button>
+    <button onclick="importProgress()">📥 استيراد التقدم</button>
+  </div>
+</div>
+  
   
   <h1>📚 مكتبتي التعليمية</h1>
    
@@ -538,6 +596,50 @@ window.addEventListener("click", (e) => {
   }
 });
 
+
+
+
+
+
+// إظهار/إخفاء المنيو
+document.getElementById("toggleMenu").addEventListener("click", () => {
+  let menu = document.getElementById("menuContent");
+  menu.style.display = (menu.style.display === "block") ? "none" : "block";
+});
+
+// دوال التصدير والاستيراد
+function exportProgress() {
+  let data = JSON.stringify(localStorage);
+  let blob = new Blob([data], { type: "application/json" });
+  let url = URL.createObjectURL(blob);
+  let a = document.createElement("a");
+  a.href = url;
+  a.download = "progress.json";
+  a.click();
+}
+
+function importProgress() {
+  let input = document.createElement("input");
+  input.type = "file";
+  input.accept = ".json";
+  input.onchange = (e) => {
+    let file = e.target.files[0];
+    let reader = new FileReader();
+    reader.onload = (event) => {
+      let data = JSON.parse(event.target.result);
+      for (let key in data) {
+        localStorage.setItem(key, data[key]);
+      }
+      alert("✅ تم استيراد التقدم بنجاح، اعمل Reload للصفحة.");
+      location.reload();
+    };
+    reader.readAsText(file);
+  };
+  input.click();
+}
+
+
+
   
 </script>
   
@@ -549,6 +651,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
