--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {font-family: "Cairo", sans-serif;margin:0;background:linear-gradient(135deg,#f0f4f8,#e6ecf0);direction:rtl;}
-    nav {background:#0077b6;padding:15px;display:flex;justify-content:center;gap:20px;position:sticky;top:0;z-index:10;}
+    nav {background:#03a9ff;padding:15px;display:flex;justify-content:center;gap:20px;position:sticky;top:0;z-index:10;border-radius:15px;}
     nav a {color:#fff;text-decoration:none;font-weight:bold;font-size:18px;transition:color .3s;}
-    nav a:hover {color:#ffdd00;}
+    nav a:hover {color:#9afff1;}
     h1 {text-align:center;color:#222;margin:20px 0;font-size:28px;}
     .subject {margin:15px auto;background:#fff;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.1);width:85%;transition:.2s;overflow:hidden;}
     .subject:hover {transform:translateY(-3px);box-shadow:0 6px 18px rgba(0,0,0,.15);}
@@ -644,6 +644,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
