--- a/pdf.html
+++ b/pdf.html
@@ -10,7 +10,7 @@
     body {font-family:"Cairo",sans-serif;margin:0;background:linear-gradient(135deg,#f0f4f8,#e6ecf0);direction:rtl;}
     nav {background:#03a9ff;padding:15px;display:flex;justify-content:center;gap:20px;border-radius:15px;}
     nav a {color:#fff;text-decoration:none;font-weight:bold;font-size:18px;transition:color .3s;}
-    nav a:hover {color:#ffdd00;}
+    nav a:hover {color:#9afff1;}
     h1 {text-align:center;margin:20px 0;color:#222;font-size:28px;}
     
     .subject {margin:15px auto;background:#fff;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.1);width:85%;transition:.2s;overflow:hidden;}
@@ -158,6 +158,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 
 
 ---
+
 
 
 
