--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {font-family: "Cairo", sans-serif;margin:0;background:linear-gradient(135deg,#f0f4f8,#e6ecf0);direction:rtl;}
-    nav {background:#0077b6;padding:15px;display:flex;justify-content:center;gap:20px;position:sticky;top:0;z-index:10;border-radius:15px;}
+    nav {background:#03a9ff;padding:15px;display:flex;justify-content:center;gap:20px;position:sticky;top:0;z-index:10;border-radius:15px;}
     nav a {color:#fff;text-decoration:none;font-weight:bold;font-size:18px;transition:color .3s;}
     nav a:hover {color:#9afff1;}
     h1 {text-align:center;color:#222;margin:20px 0;font-size:28px;}
@@ -644,6 +644,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
