--- a/pdf.html
+++ b/pdf.html
@@ -110,7 +110,7 @@
 
 
   <!-- Circuits -->
-  <details class="subject">
+  <details class="subject1">
     <summary>🔌 Circuits - ملفات</summary>
     <ul>
       <li><a href="https://drive.google.com/file/d/1sSMh0Cq6w0K3UnpuJKpazivjpZEm8ChZ/view?usp=drive_link" target="_blank">Circuits</a></li>
@@ -121,7 +121,7 @@
   
   
   <!-- Math -->
-  <details class="subject">
+  <details class="subject2">
     <summary>📚 المنهج - درايف</summary>
     <ul>
       <li><a href="https://drive.google.com/drive/folders/1n29aDLIUW9GppgrdxEYHVVD4neYhRkB_" target="_blank"> المنهج </a></li>
@@ -132,7 +132,7 @@
   
   
   <!-- Circuits -->
-  <details class="subject">
+  <details class="subject3">
     <summary>🎞 youtube - صفحة يوتيوب </summary>
     <ul>
       <li><a href="https://youtube.com/@ENGMOHAMEDOSAMA1?si=Cd39VHoFS_FV4mqT" target="_blank">صفحة يوتيوب</a></li>
@@ -144,7 +144,7 @@
   
   
   <!-- Circuits -->
-  <details class="subject">
+  <details class="subject4">
     <summary>🚀 telegrame - تليجرام </summary>
     <ul>
       <li><a href="https://t.me/Electrical_power_bot" target="_blank">تليجرام</a></li>
@@ -167,6 +167,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 
 
 ---
+
 
 
 
