--- a/home.html
+++ b/home.html
@@ -543,7 +543,7 @@ body.dark .btn {
   </details>
 
   <!-- قياسات -->
-  <details class="subject technology">
+<!--  <details class="subject technology">
     <summary>💻 قياسات</summary>
     <ul>
       <li><a href="https://www.youtube.com/watch?v=vDUc4TDfItM&list=PLyO98vlXWz8uzsd3LuAEXfYwJGGldJYpb&index=1&pp=iAQB">درس 1</a></li>
@@ -555,7 +555,7 @@ body.dark .btn {
       <li><a href="https://www.youtube.com/watch?v=gK6cdAPg7P4&list=PLyO98vlXWz8uzsd3LuAEXfYwJGGldJYpb&index=7&pp=iAQB">درس 7</a></li>
       <li><a href="https://www.youtube.com/watch?v=DmqpVaFhRWQ&list=PLyO98vlXWz8uzsd3LuAEXfYwJGGldJYpb&index=8&pp=iAQB">درس 8</a></li> 
       </ul>
-  </details>
+  </details> --!>
   
   
 
@@ -769,6 +769,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
