--- a/home.html
+++ b/home.html
@@ -690,14 +690,14 @@ body.dark #taskList li.done {
   <details class="subject math" open>
     <summary>📘 Math 3</summary>
     <ul>
-      <li><a href="https://youtu.be/WYbk7-YjYwQ">درس 1</a></li>
-      <li><a href="https://youtu.be/quBIE8RU1yc">درس 2</a></li>
-      <li><a href="https://youtu.be/_C6Yg-mxC1w">درس 3</a></li>
-      <li><a href="https://youtu.be/UKaBdhjQ8GQ">درس 4</a></li>
-      <li><a href="https://youtu.be/3d8zlP8qJMo">درس 5</a></li>
-      <li><a href="https://youtu.be/ZekH_yaue88">درس 6</a></li>
-      <li><a href="https://youtu.be/sHEyM-mvEWY">درس 7</a></li>
-      <li><a href="https://youtu.be/bqJCYnYcq8M?si=dnDzAmTqfYT6GvbM">درس 8</a></li>
+      <li><a href="https://youtu.be/WYbk7-YjYwQ">درس 1 (M)</a></li>
+      <li><a href="https://youtu.be/quBIE8RU1yc">درس 2 (M)</a></li>
+      <li><a href="https://youtu.be/_C6Yg-mxC1w">درس 3 (M)</a></li>
+      <li><a href="https://youtu.be/UKaBdhjQ8GQ">درس 4 (M)</a></li>
+      <li><a href="https://youtu.be/3d8zlP8qJMo">درس 5 (M)</a></li>
+      <li><a href="https://youtu.be/ZekH_yaue88">درس 6 (M)</a></li>
+      <li><a href="https://youtu.be/sHEyM-mvEWY">درس 7 (M)</a></li>
+      <li><a href="https://youtu.be/bqJCYnYcq8M?si=dnDzAmTqfYT6GvbM">درس 8 (M)</a></li>
 
     </ul>
   </details>
@@ -710,16 +710,16 @@ body.dark #taskList li.done {
       <div class="LESSONS">
          <summary>⚛️ Physics 3 (م.اسماعيل)</summary>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=ZHfeTMlImto&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=1&pp=iAQB">درس 1</a></li>
-      <li><a href="https://www.youtube.com/watch?v=FYJHzapophM&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=2&pp=iAQB">درس 2</a></li>
-      <li><a href="https://www.youtube.com/watch?v=yMe0osGdiSI&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=3&pp=iAQB">درس 3</a></li>
-      <li><a href="https://www.youtube.com/watch?v=F-mCZPaxrKc&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=4&pp=iAQB">درس 4</a></li>
-      <li><a href="https://www.youtube.com/watch?v=XGFayKdFmbU&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=5&pp=iAQB">درس 5</a></li>
-      <li><a href="https://www.youtube.com/watch?v=MowPj7PBz7o&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=6&pp=iAQB">درس 6</a></li>
-      <li><a href="https://www.youtube.com/watch?v=tHV4eYZAcPM&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=7&pp=iAQB">درس 7</a></li>
-      <li><a href="https://www.youtube.com/watch?v=fPSV2fe_VzE&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=8&pp=iAQB">درس 8</a></li>
-      <li><a href="https://www.youtube.com/watch?v=F80PmyTwvUE&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=9&t=2206s&pp=iAQB">درس 9</a></li>
-      <li><a href="https://www.youtube.com/watch?v=aa0xqdqf9vY&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=10&t=12s&pp=iAQB">درس 10</a></li>
+      <li><a href="https://www.youtube.com/watch?v=ZHfeTMlImto&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=1&pp=iAQB">درس 1 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=FYJHzapophM&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=2&pp=iAQB">درس 2 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=yMe0osGdiSI&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=3&pp=iAQB">درس 3 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=F-mCZPaxrKc&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=4&pp=iAQB">درس 4 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=XGFayKdFmbU&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=5&pp=iAQB">درس 5 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=MowPj7PBz7o&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=6&pp=iAQB">درس 6 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=tHV4eYZAcPM&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=7&pp=iAQB">درس 7 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=fPSV2fe_VzE&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=8&pp=iAQB">درس 8 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=F80PmyTwvUE&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=9&t=2206s&pp=iAQB">درس 9 (P.I)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=aa0xqdqf9vY&list=PLD30uL4tqplE-3lvM_eqLmyxF9Hp1S_F2&index=10&t=12s&pp=iAQB">درس 10 (P.I)</a></li>
       
     </ul>
 
@@ -728,14 +728,14 @@ body.dark #taskList li.done {
        <summary>M.Saied</summary>
       <div class="LESSONS">
             <ul>
-      <li><a href="https://youtu.be/BFHNUDU8PzI">درس 1</a></li>
-      <li><a href="https://youtu.be/9VpVy02VRP4">درس 2</a></li>
-      <li><a href="https://youtu.be/tr8JeM4BGmk">درس 3</a></li>
-      <li><a href="https://youtu.be/C71YYM9wp80">درس 4</a></li>
-      <li><a href="https://youtu.be/OYQdBef4hXY">درس 5</a></li>
-      <li><a href="https://youtu.be/7aV5Fuqgsks">درس 6</a></li>
-      <li><a href="https://youtu.be/3-wcejnOkCI">درس 7</a></li>
-      <li><a href="https://youtu.be/cNoA-lOQxjE">درس 8</a></li>
+      <li><a href="https://youtu.be/BFHNUDU8PzI">درس 1 (P.S)</a></li>
+      <li><a href="https://youtu.be/9VpVy02VRP4">درس 2 (P.S)</a></li>
+      <li><a href="https://youtu.be/tr8JeM4BGmk">درس 3 (P.S)</a></li>
+      <li><a href="https://youtu.be/C71YYM9wp80">درس 4 (P.S)</a></li>
+      <li><a href="https://youtu.be/OYQdBef4hXY">درس 5 (P.S)</a></li>
+      <li><a href="https://youtu.be/7aV5Fuqgsks">درس 6 (P.S)</a></li>
+      <li><a href="https://youtu.be/3-wcejnOkCI">درس 7 (P.S)</a></li>
+      <li><a href="https://youtu.be/cNoA-lOQxjE">درس 8 (P.S)</a></li>
     </ul>
     </details>
   </details>
@@ -745,17 +745,17 @@ body.dark #taskList li.done {
   <details class="subject circuits">
     <summary>🔌 Circuits</summary>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=WZoA4XOU4sI&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=1&pp=iAQB">درس 1</a></li>
-      <li><a href="https://www.youtube.com/watch?v=8sYwXvD6X4w&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=2&pp=iAQB">درس 2</a></li>
-      <li><a href="https://www.youtube.com/watch?v=ypK8IZYqj90&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=3&pp=iAQB">درس 3</a></li>
-      <li><a href="https://www.youtube.com/watch?v=njxNFqgKvPA&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=4&pp=iAQB0gcJCcoJAYcqIYzv">درس 4</a></li>
-      <li><a href="https://www.youtube.com/watch?v=rgswkXR_wuo&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=5&t=318s&pp=iAQB">درس 5</a></li>
-      <li><a href="https://www.youtube.com/watch?v=wop4X7xB4C0&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=6&pp=iAQB">درس 6</a></li>
-      <li><a href="https://www.youtube.com/watch?v=XkIxoC5o5_4&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=7&pp=iAQB">درس 7</a></li>
-      <li><a href="https://www.youtube.com/watch?v=FzjEB8oM2_w&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=8&pp=iAQB">درس 8</a></li>
-      <li><a href="https://www.youtube.com/watch?v=UUuftAn7ec8&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=9&pp=iAQB">درس 9</a></li>
-      <li><a href="https://www.youtube.com/watch?v=KXFACUtDAw8&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=10&pp=iAQB">درس 10</a></li>
-      <li><a href="https://www.youtube.com/watch?v=UV2fJMU8HJs&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=11&pp=iAQB">درس 11</a></li>
+      <li><a href="https://www.youtube.com/watch?v=WZoA4XOU4sI&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=1&pp=iAQB">درس 1 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=8sYwXvD6X4w&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=2&pp=iAQB">درس 2 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=ypK8IZYqj90&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=3&pp=iAQB">درس 3 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=njxNFqgKvPA&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=4&pp=iAQB0gcJCcoJAYcqIYzv">درس 4 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=rgswkXR_wuo&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=5&t=318s&pp=iAQB">درس 5 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=wop4X7xB4C0&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=6&pp=iAQB">درس 6 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=XkIxoC5o5_4&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=7&pp=iAQB">درس 7 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=FzjEB8oM2_w&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=8&pp=iAQB">درس 8 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=UUuftAn7ec8&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=9&pp=iAQB">درس 9 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=KXFACUtDAw8&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=10&pp=iAQB">درس 10 (C)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=UV2fJMU8HJs&list=PLyO98vlXWz8tAbynbZEGcdeys8Uk5eroq&index=11&pp=iAQB">درس 11 (C)</a></li>
 
     </ul>
   </details>
@@ -778,14 +778,14 @@ body.dark #taskList li.done {
   <details class="subject stats">
     <summary>📊 احصاء</summary>
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=HvZRcS7u2yM&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=1&pp=iAQB0gcJCcoJAYcqIYzv">درس 1</a></li>
-      <li><a href="https://www.youtube.com/watch?v=Ru-UJ4BKrqw&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=2&t=319s&pp=iAQB">درس 2</a></li>
-      <li><a href="https://www.youtube.com/watch?v=0utUydpaAuA&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=3&t=4710s&pp=iAQB">درس 3</a></li>
-      <li><a href="https://www.youtube.com/watch?v=kj5FIinFL3I&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=4&pp=iAQB">درس 4</a></li>
-      <li><a href="https://www.youtube.com/watch?v=HJKP0VJ1gDk&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=5&pp=iAQB">درس 5</a></li>
-      <li><a href="https://www.youtube.com/watch?v=Ev9xT3LuWmI&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=6&pp=iAQB">درس 6</a></li>
-      <li><a href="https://www.youtube.com/watch?v=X6QM1uWyEnk&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=7&pp=iAQB">درس 7</a></li>
-      <li><a href="https://www.youtube.com/watch?v=p3V6KoTrKEI&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=8&pp=iAQB">درس 8</a></li>
+      <li><a href="https://www.youtube.com/watch?v=HvZRcS7u2yM&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=1&pp=iAQB0gcJCcoJAYcqIYzv">درس 1 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=Ru-UJ4BKrqw&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=2&t=319s&pp=iAQB">درس 2 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=0utUydpaAuA&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=3&t=4710s&pp=iAQB">درس 3 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=kj5FIinFL3I&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=4&pp=iAQB">درس 4 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=HJKP0VJ1gDk&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=5&pp=iAQB">درس 5 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=Ev9xT3LuWmI&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=6&pp=iAQB">درس 6 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=X6QM1uWyEnk&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=7&pp=iAQB">درس 7 (اح)</a></li>
+      <li><a href="https://www.youtube.com/watch?v=p3V6KoTrKEI&list=PLyO98vlXWz8uncmoSMdOOypcnSA1kr-0V&index=8&pp=iAQB">درس 8 (اح)</a></li>
 
     </ul>
   </details>
@@ -794,13 +794,13 @@ body.dark #taskList li.done {
   <details class="subject linguistics">
     <summary>📝 انسانيات</summary>
     <ul>
-      <li><a href="https://youtu.be/30q0XB3gVko">درس 1</a></li>
-      <li><a href="https://youtu.be/dphQ7M00y34">درس 2</a></li>
-      <li><a href="https://youtu.be/IKBlNryJMT8">درس 3</a></li>
-      <li><a href="https://youtu.be/nFkahm3JNOA">درس 4</a></li>
-      <li><a href="https://youtu.be/WKmTb124C5k">درس 5</a></li>
-      <li><a href="https://youtu.be/mSemK77WaNw">درس 6</a></li>
-      <li><a href="https://youtu.be/4HCk0Nhhum8">درس 7</a></li>
+      <li><a href="https://youtu.be/30q0XB3gVko">درس 1 (ان)</a></li>
+      <li><a href="https://youtu.be/dphQ7M00y34">درس 2 (ان)</a></li>
+      <li><a href="https://youtu.be/IKBlNryJMT8">درس 3(ان)</a></li>
+      <li><a href="https://youtu.be/nFkahm3JNOA">درس 4 (ان)</a></li>
+      <li><a href="https://youtu.be/WKmTb124C5k">درس 5 (ان)</a></li>
+      <li><a href="https://youtu.be/mSemK77WaNw">درس 6 (ان)</a></li>
+      <li><a href="https://youtu.be/4HCk0Nhhum8">درس 7 (ان)</a></li>
      
     </ul>
   </details>
@@ -809,17 +809,17 @@ body.dark #taskList li.done {
   <details class="subject dynamics">
     <summary>⚙️ مجالات</summary>
     <ul>
-      <li><a href="https://youtu.be/oNc_GEzV7hc">درس 1</a></li>
-      <li><a href="https://youtu.be/Dyl-s_7Zrbc">درس 2</a></li>
-      <li><a href="https://youtu.be/UtO9s_Pqn90">درس 3</a></li>
-      <li><a href="https://youtu.be/Hf8nEKq9u8o">درس 4</a></li>
-      <li><a href="https://youtu.be/nDBocsTXzag">درس 5</a></li>
-      <li><a href="https://youtu.be/0Qn8GEJRVlM">درس 6</a></li> 
-      <li><a href="https://youtu.be/4NuAEOBfr5w">درس 7</a></li>
-      <li><a href="https://youtu.be/A4x2irXs3TI">درس 8</a></li>
-      <li><a href="https://youtu.be/lui2UDeAVUw">درس 9</a></li>
-      <li><a href="https://youtu.be/s68MYVd1KfM">درس 10</a></li>
-      <li><a href="https://youtu.be/KlW3TdvEFlg">درس 11</a></li>
+      <li><a href="https://youtu.be/oNc_GEzV7hc">درس 1 (م)</a></li>
+      <li><a href="https://youtu.be/Dyl-s_7Zrbc">درس 2 (م)</a></li>
+      <li><a href="https://youtu.be/UtO9s_Pqn90">درس 3 (م)</a></li>
+      <li><a href="https://youtu.be/Hf8nEKq9u8o">درس 4 (م)</a></li>
+      <li><a href="https://youtu.be/nDBocsTXzag">درس 5 (م)</a></li>
+      <li><a href="https://youtu.be/0Qn8GEJRVlM">درس 6 (م)</a></li> 
+      <li><a href="https://youtu.be/4NuAEOBfr5w">درس 7 (م)</a></li>
+      <li><a href="https://youtu.be/A4x2irXs3TI">درس 8 (م)</a></li>
+      <li><a href="https://youtu.be/lui2UDeAVUw">درس 9 (م)</a></li>
+      <li><a href="https://youtu.be/s68MYVd1KfM">درس 10 (م)</a></li>
+      <li><a href="https://youtu.be/KlW3TdvEFlg">درس 11 (م)</a></li>
 
 
     </ul>
@@ -829,14 +829,14 @@ body.dark #taskList li.done {
   <details class="subject electronics">
     <summary>💡 تقارير </summary>
     <ul>
-      <li><a href="https://youtu.be/iQ6x3QgLmQE">درس 1</a></li>
-      <li><a href="https://youtu.be/FbFKzrseK1s">درس 2</a></li>
-      <li><a href="https://youtu.be/_OfmP3WUVOI">درس 3</a></li>
-      <li><a href="https://youtu.be/vnvuZH5Am88">درس 4</a></li>
-      <li><a href="https://youtu.be/TMqZLs-I6eU">درس 5</a></li>
-      <li><a href="https://youtu.be/ncDQL00T1KQ">درس 6</a></li> 
-      <li><a href="https://youtu.be/-P9HLnh6mjs">درس 7</a></li>
-      <li><a href="https://youtu.be/M_1J5YEgwrM">درس 8</a></li> 
+      <li><a href="https://youtu.be/iQ6x3QgLmQE">درس 1 (ت)</a></li>
+      <li><a href="https://youtu.be/FbFKzrseK1s">درس 2 (ت)</a></li>
+      <li><a href="https://youtu.be/_OfmP3WUVOI">درس 3 (ت)</a></li>
+      <li><a href="https://youtu.be/vnvuZH5Am88">درس 4 (ت)</a></li>
+      <li><a href="https://youtu.be/TMqZLs-I6eU">درس 5 (ت)</a></li>
+      <li><a href="https://youtu.be/ncDQL00T1KQ">درس 6 (ت)</a></li> 
+      <li><a href="https://youtu.be/-P9HLnh6mjs">درس 7 (ت)</a></li>
+      <li><a href="https://youtu.be/M_1J5YEgwrM">درس 8 (ت)</a></li> 
       </ul>
   </details>
 
@@ -1392,6 +1392,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
