--- a/home.html
+++ b/home.html
@@ -1391,27 +1391,40 @@ window.addEventListener('storage', renderSidebar);
 
 
 
+// رابط الـ Web App اللي خدته من Google Apps Script
+const SHEET_API_URL = "https://script.google.com/macros/s/AKfycbxRyDuUMxWaqM9rKvmHPqwyRZPYIV1PggbF8PFENf-_rWVO6Yxnjubnb8u18BI8Vank/exec";
 
-حفظ Log جديد:
-
-async function saveLog(email, title) {
+// دالة لحفظ السجل في Google Sheet
+async function saveLogToSheet(email, title) {
   const now = new Date();
   const date = now.toISOString().split('T')[0];
   const time = now.toLocaleTimeString();
 
-  await fetch("https://script.google.com/macros/s/AKfycbxRyDuUMxWaqM9rKvmHPqwyRZPYIV1PggbF8PFENf-_rWVO6Yxnjubnb8u18BI8Vank/exec", {
-    method: "POST",
-    body: JSON.stringify({ email, date, time, title })
-  });}
-  
+  try {
+    const res = await fetch(SHEET_API_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ email, date, time, title })
+    });
+    const data = await res.json();
+    console.log("✅ Saved to sheet:", data);
+  } catch (err) {
+    console.error("❌ Error saving to sheet:", err);
+  }
+}
 
-جلب سجلات المستخدم:
-
-async function loadLogs(email) {
-  const res = await fetch(`https://script.google.com/macros/s/AKfycbxRyDuUMxWaqM9rKvmHPqwyRZPYIV1PggbF8PFENf-_rWVO6Yxnjubnb8u18BI8Vank/exec=${encodeURIComponent(email)}`);
-  const data = await res.json();
-  console.log(data.logs); // هنا تقدر تعرضها في واجهة المستخدم
-  
+// دالة لتحميل السجلات من Google Sheet
+async function loadLogsFromSheet(email) {
+  try {
+    const res = await fetch(`${SHEET_API_URL}?email=${encodeURIComponent(email)}`);
+    const data = await res.json();
+    console.log("📒 Logs from sheet:", data.logs);
+    return data.logs;
+  } catch (err) {
+    console.error("❌ Error loading logs:", err);
+    return [];
+  }
+}
   
 </script>
   
@@ -1423,6 +1436,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
