--- a/home.html
+++ b/home.html
@@ -1123,7 +1123,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
       // عنوان اليوم
       const h3 = document.createElement('h3');
-      h3.textContent = "📆 " + date;
+      h3.textContent = "📅" + date;
 
       // زرار مسح يوم
       const delDayBtn = document.createElement('button');
@@ -1437,6 +1437,7 @@ Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab
 </body>
 
 </html>
+
 
 
 
